@@ -117,6 +117,7 @@ export(rmnorm_chol)
 export(rmulti)
 export(rmvt_chol)
 export(rt_nonstandard)
+export(runMCMC)
 export(run.time)
 export(rwish_chol)
 export(sampler_BASE)
