@@ -16,6 +16,8 @@ USER LEVEL CHANGES
 
 -- Progress bar added to MCMC.
 
+-- New function runMCMC() available for easily running multiple MCMC chains.
+
 -- model checking modified so that only size/dimension and NA checking is done by default. Extended checking of ability to calculate all model nodes is now invoked via model$check() only at user request.
 
 -- MCMC and modelValues configuration syntax now uses 'conf' rather than 'spec' in its naming throughout NIMBLE. 
